--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-        <h1>HELLO </h1>
+        <h1>HELLO</h1>
+        <h2>bye</h2>
 </body>
 </html>
